SFDCDataService/main/default/objects/SFDC_Data_Service_Source__c/SFDC_Data_Service_Source__c.object-meta.xml
<CustomObject>
    <label>SFDC Data Service Source</label>
    <nameField>
        <displayFormat>SFS-{0000}</displayFormat>
        <label>SFDC Data Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC Data Service Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>