SFDCDataService/main/default/objects/SFDC_Data_Service_Source__c/fields/SFDC_Data_Service_Migration__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Data_Service_Migration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Data Service Migration</label>
    <referenceTo>SFDC_Data_Service_Migration__c</referenceTo>
    <relationshipLabel>SFDC Data Service Sources</relationshipLabel>
    <relationshipName>SFDC_Data_Service_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>