SFDCDataService/main/default/objects/SFDC_Data_Service_Source__c/fields/Source_Database__c.field-meta.xml
<CustomField>
    <fullName>Source_Database__c</fullName>
    <label>Source Database</label>
    <length>50</length>
    <type>Text</type>
</CustomField>