SFDCDataService/main/default/objects/SFDC_Data_Service_Source__c/fields/Source_Schema__c.field-meta.xml
<CustomField>
    <fullName>Source_Schema__c</fullName>
    <label>Source Schema</label>
    <length>50</length>
    <type>Text</type>
</CustomField>