SFDCDataService/main/default/objects/SFDC_Data_Service_Source__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Migration_Title__c</columns>
    <columns>Source_Schema__c</columns>
    <columns>Source_Database__c</columns>
    <columns>Prefix_Identifier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>